--- a/languages/woocommerce-shareasale-merchant-tracking.pot
+++ b/languages/woocommerce-shareasale-merchant-tracking.pot
@@ -1,19 +1,22 @@
-# Copyright (C) 2014 WooCommerce ShareASale Merchant Tracking
+# Copyright (C) 2015 WooCommerce ShareASale Merchant Tracking
 # This file is distributed under the same license as the WooCommerce ShareASale Merchant Tracking package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WooCommerce ShareASale Merchant Tracking 1.0.1\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/woocommerce-shareasale-merchant-tracking\n"
-"POT-Creation-Date: 2014-03-01 18:33:49+00:00\n"
+"Project-Id-Version: WooCommerce ShareASale Merchant Tracking 1.0.4\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/woocommerce-"
+"shareasale-merchant-tracking\n"
+"POT-Creation-Date: 2015-03-26 11:33:02+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
 #: _modules/dashboard/views/dashboard-nodata.php:14
-msgid "Thanks for using our plugins - why not check out some of our other amazing Premium WordPress Plugins?"
+msgid ""
+"Thanks for using our plugins - why not check out some of our other amazing "
+"Premium WordPress Plugins?"
 msgstr ""
 
 #: _modules/dashboard/views/dashboard-nodata.php:15
@@ -22,7 +25,9 @@ msgid "Visit WP Cube"
 msgstr ""
 
 #: _modules/dashboard/views/dashboard.php:18
-msgid "Thanks for using our plugins - why not check out some of our other amazing Premium WordPress Plugins below?"
+msgid ""
+"Thanks for using our plugins - why not check out some of our other amazing "
+"Premium WordPress Plugins below?"
 msgstr ""
 
 #: _modules/dashboard/views/dashboard.php:33
@@ -43,7 +48,7 @@ msgstr ""
 
 #: _modules/dashboard/views/footer-upgrade.php:16
 #: _modules/dashboard/views/sidebar-pro.php:23
-#: _modules/dashboard/views/sidebar-pro.php:28
+#: _modules/dashboard/views/sidebar-pro.php:30
 msgid "Support"
 msgstr ""
 
@@ -52,7 +57,7 @@ msgid "Access to one on one email support"
 msgstr ""
 
 #: _modules/dashboard/views/footer-upgrade.php:17
-#: _modules/dashboard/views/sidebar-pro.php:27
+#: _modules/dashboard/views/sidebar-pro.php:28
 msgid "Documentation"
 msgstr ""
 
@@ -65,7 +70,9 @@ msgid "Updates"
 msgstr ""
 
 #: _modules/dashboard/views/footer-upgrade.php:18
-msgid "Receive one click update notifications, right within your WordPress Adminstration panel"
+msgid ""
+"Receive one click update notifications, right within your WordPress "
+"Adminstration panel"
 msgstr ""
 
 #: _modules/dashboard/views/footer-upgrade.php:19
@@ -86,7 +93,9 @@ msgid "About"
 msgstr ""
 
 #: _modules/dashboard/views/sidebar-donate.php:13
-msgid "Found this plugin useful? Donations to help with support and development are appreciated."
+msgid ""
+"Found this plugin useful? Donations to help with support and development are "
+"appreciated."
 msgstr ""
 
 #: _modules/dashboard/views/sidebar-donate.php:30
@@ -100,7 +109,8 @@ msgstr ""
 
 #: _modules/dashboard/views/sidebar-donate.php:43
 #: _modules/dashboard/views/sidebar-upgrade.php:13
-msgid "Subscribe to the newsletter and receive updates on our WordPress Plugins"
+msgid ""
+"Subscribe to the newsletter and receive updates on our WordPress Plugins"
 msgstr ""
 
 #: _modules/dashboard/views/sidebar-donate.php:49
@@ -117,19 +127,19 @@ msgstr ""
 msgid "Version"
 msgstr ""
 
-#: views/settings.php:3
+#: views/settings.php:2
 msgid "Settings"
 msgstr ""
 
-#: views/settings.php:27
+#: views/settings.php:26
 msgid "Merchant Settings"
 msgstr ""
 
-#: views/settings.php:31
+#: views/settings.php:30
 msgid "Merchant ID"
 msgstr ""
 
-#: views/settings.php:34
+#: views/settings.php:33
 msgid "Your ShareASale Merchant ID"
 msgstr ""
 
@@ -137,15 +147,25 @@ msgstr ""
 msgid "Save"
 msgstr ""
 
-#: woocommerce-shareasale-merchant-tracking.php:102
+#: woocommerce-shareasale-merchant-tracking.php:110
+msgid "nonce field is missing. Settings NOT saved."
+msgstr ""
+
+#: woocommerce-shareasale-merchant-tracking.php:113
+msgid "Invalid nonce specified. Settings NOT saved."
+msgstr ""
+
+#: woocommerce-shareasale-merchant-tracking.php:117
 msgid "Settings Updated."
 msgstr ""
+
 #. Plugin Name of the plugin/theme
 msgid "WooCommerce ShareASale Merchant Tracking"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://www.wpcube.co.uk/plugins/woocommerce-shareasale-merchant-tracking"
+msgid ""
+"http://www.wpcube.co.uk/plugins/woocommerce-shareasale-merchant-tracking"
 msgstr ""
 
 #. Description of the plugin/theme
